# gemini-web-api

./: .gitignore  CLAUDE.md  README.md  cli.py  main.py  pyproject.toml
.claude/skills/gemini-web-api/: SKILL.md
docs/devlog/: claude_2026-07-07-2130-reverse-engineer-gemini-openai-api.md  claude_2026-07-07-2230-emulated-tool-calling.md  claude_2026-07-08-0045-veo-video-cracked.md  claude_2026-07-08-1100-true-streaming.md
gemini_openai/: account.py  cli.py  config.py  gemini_pool.py  openai_schemas.py  server.py  tools.py  video.py  video_bridge.py
tools/: benchmark.py  capture_lib_req.py  cdp_cookie_test.py  cdp_plumbing_test.py  dl_debug.py  dl_variants.py  dl_video2.py  extract_cookies.py  fresh_dl_test.py  image_dl_test.py  inspect_usercontent_cookies.py  osid_probe.py  quota_probe.py  read_existing_video.py  sdk_smoke.py  stream_probe.py  tools_e2e.py  try_all_accounts.py  u5_fulljar_probe.py  verify_client.py  verify_video_url.py  vid_bisect.py  vid_capture_resp.py  vid_ctx.py  vid_diag.py  vid_dump.py  vid_inspect_output.py  vid_lib_session.py  vid_poll_test.py  vid_raw2.py  vid_raw_probe.py  vid_stream.py  vid_u6.py  vid_verify.py  video_probe.py  video_test.py
