[project]
name = "gemini-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastapi>=0.139.0",
    "gemini-webapi>=2.0.0",
    "json-repair>=0.61.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "openai>=2.44.0",
    "pytest>=9.1.1",
]
