[project]
name = "gemini-web-api"
version = "0.1.0"
description = "Unofficial OpenAI-compatible API over the gemini.google.com web app (chat, streaming, tool calling, images, Veo video)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastapi>=0.139.0",
    "gemini-webapi>=2.0.0",
    "httpx>=0.27.0",
    "json-repair>=0.61.2",
    "pydantic>=2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.2",
    "websockets>=13.0",
]

[project.scripts]
gemini-web-api = "gemini_openai.server:run"
gemini-web-api-cli = "gemini_openai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_openai"]

[dependency-groups]
dev = [
    "openai>=2.44.0",
    "pytest>=9.1.1",
]
